--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -106,8 +106,17 @@ OBJS= \
     obj/bloom.o \
     obj/noui.o \
     obj/leveldb.o \
-    obj/txdb.o
-
+    obj/txdb.o \
+    obj/stealth.o \
+    Lyra2RE/Sponge.o \
+    Lyra2RE/Lyra2.o \
+    Lyra2RE/Lyra2RE.o \
+    Lyra2RE/blake.o \
+    Lyra2RE/groestl.o \
+    Lyra2RE/keccak.o \
+    Lyra2RE/skein.o \
+    Lyra2RE/cubehash.o \
+    Lyra2RE/bmw.o
 ifdef USE_SSE2
 DEFS += -DUSE_SSE2
 OBJS_SSE2= obj/scrypt-sse2.o
