--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -215,6 +215,7 @@ test_monacoin: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
 clean:
 	-rm -f monacoind test_monacoin
 	-rm -f obj/*.o
+	-rm -f Lyra2RE/*.o
 	-rm -f obj-test/*.o
 	-rm -f obj/*.P
 	-rm -f obj-test/*.P
